Atualização no projeto

--- a/index.html
+++ b/index.html
@@ -122,6 +122,6 @@ A principal inspiração para os traços do novo Bugdroid veio daqueles bonequin
 
     </div>
     <footer>
-    Site criado por Gustavo Guanabara para o CursoemVideo.</footer>
+    Site criado por Daniel Caldas.</footer>
 </body>
 </html>
